NetBSD Problem Report #50692

From www@NetBSD.org  Fri Jan 22 17:06:20 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 328437A219
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 22 Jan 2016 17:06:20 +0000 (UTC)
Message-Id: <20160122170619.1F9447ACC8@mollari.NetBSD.org>
Date: Fri, 22 Jan 2016 17:06:19 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/ic/atw.c:991: possible bad bitmask ?
X-Send-Pr-Version: www-1.0

>Number:         50692
>Category:       kern
>Synopsis:       src/sys/dev/ic/atw.c:991: possible bad bitmask ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jan 22 17:10:00 +0000 2016
>Closed-Date:    Tue Jan 26 16:08:48 +0000 2016
>Last-Modified:  Tue Jan 26 16:08:48 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160121
>Organization:
>Environment:
>Description:
[src/sys/dev/ic/atw.c:991] -> [src/sys/dev/ic/atw.c:991]: (style) Same expression on both sides of '|'.

Source code is

  wcsr &= ~(ATW_WCSR_BLN_MASK|ATW_WCSR_LSOE|ATW_WCSR_MPRE|ATW_WCSR_LSOE);

Suggest either remove the duplicate or use different macro value.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50692 CVS commit: src/sys/dev/ic
Date: Tue, 26 Jan 2016 11:00:12 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Tue Jan 26 16:00:12 UTC 2016

 Modified Files:
 	src/sys/dev/ic: atw.c

 Log Message:
 PR/50692: David Binderman: Set the right wake up bits.


 To generate a diff of this commit:
 cvs rdiff -u -r1.156 -r1.157 src/sys/dev/ic/atw.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Tue, 26 Jan 2016 16:08:48 +0000
State-Changed-Why:
Christos fixed it, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.