PR/50692: David Binderman: Set the right wake up bits.