sys/dev/ic/atw.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: atw.c,v 1.156 2013/11/22 00:01:09 riz Exp $  */
+/*	$NetBSD: atw.c,v 1.157 2016/01/26 16:00:12 christos Exp $  */
 
 /*-
  * Copyright (c) 1998, 1999, 2000, 2002, 2003, 2004 The NetBSD Foundation, Inc.
@@ -34,7 +34,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: atw.c,v 1.156 2013/11/22 00:01:09 riz Exp $");
+__KERNEL_RCSID(0, "$NetBSD: atw.c,v 1.157 2016/01/26 16:00:12 christos Exp $");
 
 
 #include <sys/param.h>
@@ -988,9 +988,11 @@ atw_wcsr_init(struct atw_softc *sc)
 	uint32_t wcsr;
 
 	wcsr = ATW_READ(sc, ATW_WCSR);
-	wcsr &= ~(ATW_WCSR_BLN_MASK|ATW_WCSR_LSOE|ATW_WCSR_MPRE|ATW_WCSR_LSOE);
+	wcsr &= ~ATW_WCSR_BLN_MASK;
 	wcsr |= __SHIFTIN(7, ATW_WCSR_BLN_MASK);
-	ATW_WRITE(sc, ATW_WCSR, wcsr);	/* XXX resets wake-up status bits */
+	/* We always want to wake up on link loss or TSFT out of range */
+	wcsr |= ATW_WCSR_LSOE|ATW_WCSR_TSFTWE;
+	ATW_WRITE(sc, ATW_WCSR, wcsr);
 
 	DPRINTF(sc, ("%s: %s reg[WCSR] = %08x\n",
 	    device_xname(sc->sc_dev), __func__, ATW_READ(sc, ATW_WCSR)));
